# moc

./: .gitignore  CMakeLists.txt  README.md
arch/arm/: CMakeLists.txt  cross.cmake  egos.cpp  hooks.c  irqmgr.hpp  locker.hpp  os.cpp  syncer.hpp  timer.cpp
arch/arm/inc/: locker.hpp  syncer.hpp
arch/arm/lpc17xx/: CMakeLists.txt  cpp_hooks.cpp  ft245.c  locker.hpp  startup_lpc176x.cpp  syncer.hpp  syscalls.c  target.c
arch/arm/lpc17xx/inc/: compiler.h  target.h
arch/arm/lpc17xx/ld/: lpc1764.ld
arch/x86_64/: CMakeLists.txt  egos.cpp  locker.hpp  os.cpp  syncer.hpp  timer.cpp
arch/x86_64/inc/: locker.hpp  syncer.hpp
base/: CMakeLists.txt  main.cpp  workitem.cpp
core/: CMakeLists.txt
inc/: SP.h  SP.hpp  egos.h  egos.hpp  looper.hpp  os.h  ports.hpp  timerpool.hpp  utils.hpp  watchdog.hpp  workitem.hpp
os/baremetal/: CMakeLists.txt  egos.cpp  ports.cpp  timer.cpp
os/baremetal/default/: hal.cpp
os/baremetal/inc/: hwcan.hpp  hwser.hpp  hwtmr.hpp  irqmgr.hpp  locker.hpp  syncer.hpp
os/baremetal/lpc17xx/: CMakeLists.txt  cpp_hooks.cpp  dbg_channel.cpp  ft245.c  hal.cpp  startup_lpc176x.cpp  syscalls.c
os/baremetal/lpc17xx/cmsis/Core/Device/NXP/LPC17xx/Include/: system_lpc17xx.h
os/baremetal/lpc17xx/cmsis/Drivers/include/: lpc17xx_libcfg_default.h
os/baremetal/lpc17xx/cmsis/makesection/: makeconfig
os/baremetal/lpc17xx/cmsis/makesection/makerule/LPC17xx/: make.LPC17xx.gnu
os/baremetal/lpc17xx/inc/: ft245.h
os/baremetal/lpc17xx/inc/NXP/LPC17xx/: LPC17xx.h
os/baremetal/lpc17xx/ld/: lpc1764_lib.ld  lpc1764_mem.ld
os/linux/: .timer.cpp.swp  CMakeLists.txt  egos.cpp  ports.cpp  timer.cpp
os/linux/inc/: locker.hpp  syncer.hpp
plat/arm/: CMakeLists.txt  Makefile  cross.cmake  os.cpp
plat/x86/: CMakeLists.txt  os.cpp
tests/: gtest.how_to  osapi_ut.cpp
tools/: arm_cross_baremetal.cmake  arm_cross_linux.cmake  cmsis_lpc17xx.howto  lpc21isp
